--- a/src/components/datatable/DataTable.css
+++ b/src/components/datatable/DataTable.css
@@ -1,5 +1,4 @@
-/* @import "../../../node_modules/react-virtualized/styles.css"; */
-
+@import "~react-virtualized/styles.css";
 .DataTable {
   font-size: 11px;
   font-family: Roboto, sans-serif;
